made it php and fixed header on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,1 +1,1 @@
-/*===================================== YOU CAN WRIGHT CUSTOME CSS ======================================*/.intro-banner{    background-color: #0000cc;    color: white;}
+/*===================================== YOU CAN WRIGHT CUSTOME CSS ======================================*/.intro-banner{    background-color: #0000cc;    color: white;}.desktop-logo{    display: none;}@media only screen and (min-width: 768px) {.mobile-logo{    display: none }.desktop-logo {    display: inline; }    .header-middle .logo-header {        float: left;        margin: 9px auto;    }}
